Add asynchronous SSH administration actions
